[package]
authors = ["Enomado <ixentrum@gmail.com>"]
categories = ["embedded", "no-std"]
license = "MIT OR Apache-2.0"
name = "winding_turns_meter"
readme = "README.md"
version = "0.9.0"
edition = "2021"
exclude = [ "build.rs", "build.sh", "memory.x", "doc", "*.jpg", "*.png", "*.bmp" ]
# rust-version = "1.75.0"

[package.metadata.docs.rs]
targets = [ "thumbv7m-none-eabi", "thumbv7em-none-eabihf" ]
all-features = true

[dependencies]
embedded-hal = "1.0.0"
display-interface = "0.5.0"
display-interface-i2c = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics-core = { version = "0.4.0", optional = true }
embedded-hal-async = { version = "1.0.0",  optional = true }
maybe-async-cfg = "=0.2.4"

cortex-m = { version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"

tinybmp = "0.5.0"

panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.2.0", default-features=false }
embassy-executor = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [ "stm32f103c8", "memory-x", "defmt", "exti", "time-driver-tim3" , "unstable-pac"]  }
embassy-time = { version = "0.3.1", git = "https://github.com/embassy-rs/embassy" }
embassy-futures = "0.1.1"
embedded-hal-bus = { version = "0.2.0", features = ["async"]}
ssd1306="*"
embedded-graphics = "0.8.0"
heapless = "0.8.0"
movavg = {version="*", default_features=false, features=[]}


[dependencies.lexical-core]
version = "*"
default-features = false
# Can select only desired parsing/writing features.
features = [
    "write-integers",
    "write-floats",
    # "parse-integers",
    # "parse-floats"
    ]


[profile.dev]
opt-level="s"
codegen-units = 1
incremental = false


[profile.release]
codegen-units = 1
debug = true
lto = true
